--- a/src/app/layouts/admin/admin-layout.component.scss
+++ b/src/app/layouts/admin/admin-layout.component.scss
@@ -43,6 +43,10 @@
     line-height: 30px;
   }
 }
+
+.unread{
+  font-weight: bold;
+}
 button:focus {
   border: none !important;
   outline: none !important;
