--- a/src/app/collaboration/collaboration-detail/collaboration-detail.component.scss
+++ b/src/app/collaboration/collaboration-detail/collaboration-detail.component.scss
@@ -12,6 +12,14 @@
   }
 }
 
+.d-none{
+  display: none !important;
+}
+.gr-title{
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
 /*
 flip
 */
